PEXT-82 FEITA
- Cobre criação, listagem, busca por autor e por ID
- Tem os critérios de aceite como status Aguardando e data de criação
- Tests adicionados